--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.11",
     "vue": "^3.3.4"
   },
   "devDependencies": {
